--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Projict</title>
+    <link rel="stylesheet" href="proformance.css">
+    <title>PROJECT NATTHAWUT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
                 <ul class="nav-links">
                     <li><a href="#about">เกี่ยวกับ</a></li>
                     <li><a href="#Projects">ผลงาน</a></li>
-                    <li><a href="#contact">ติดต่อ</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
         </nav>
     </header>
@@ -26,7 +27,7 @@
     <section data-aos="fade-up" id="hero" class="hero-secion">
         <div class="hero-content">
             <h1> สวัสดีครับ! ผมชื่อ*** ณัฐวุฒิ อ่อนศรี ***</h1>
-            <p>ศึกษาที่เทคนิคสระบุรี่ สาขาวิชาเทคโนโลยีธุรกิจดิจิทัล</p>
+            <p>ศึกษาที่เทคนิคสระบุรี สาขาวิชาเทคโนโลยีธุรกิจดิจิทัล</p>
             <a href="#" class="btn">ดูงานของผม</a>
         </div>
     </section>
@@ -47,7 +48,6 @@
                     <h3>ผลงาน 1</h3>
                     <p>ตัวผมคือใคร</p>
                     <a href="performance1.html" class="btn-small">ดูเพิ่มเติม </a>
-                   
                 </div> 
         
                 <div class="Project-card">
