--- a/performence3.html
+++ b/performence3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="proformance.css">
-    <title>performance 3</title>
+    <title>PERFORMANCE 3</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
                     <ul class="nav-links">
                     <li><a href="#about">เกี่ยวกับ</a></li>
                     <li><a href="#Projects">ผลงาน</a></li>
-                    <li><a href="#contact">ติดต่อ</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
         </nav>
     </header>
@@ -59,7 +59,6 @@
     <div class="work-back">
         <a href="index.html#projects" class="btn-small"> ย้อนกลับ</a>
     </div>
-    
     
     <footer class="main-footer">
         <p>&copy; 2025 NATTHAWUT. All Rights Reserved.</p>
