--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="nav-links">
                     <li><a href="#about">เกี่ยวกับ</a></li>
                     <li><a href="#Projects">ผลงาน</a></li>
-                    <li><a href="contact.html">ติดต่อ</a></li>
+                    <li><a href="#contact">ติดต่อ</a></li>
                 </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
         <div class="hero-content">
             <h1> สวัสดีครับ! ผมชื่อ*** ณัฐวุฒิ อ่อนศรี ***</h1>
             <p>ศึกษาที่เทคนิคสระบุรี สาขาวิชาเทคโนโลยีธุรกิจดิจิทัล</p>
-            <a href="#" class="btn">ดูงานของผม</a>
+            <a href="performance1.html" class="btn">ประวัติส่วนตัว</a>
         </div>
     </section>
     
@@ -73,6 +73,7 @@
         <p>เบอร์โทร: 092-249-4139</p>
         <p>Facebook: Natthawut Onsri</p>
         <p>Instagram: nxtthxwut__</p>
+        <a href="contact.html" class="btn">ติดต่อ</a>
     </section>  
     
     <footer class="main-footer">
