--- a/performance2.html
+++ b/performance2.html
@@ -13,16 +13,16 @@
 <body>
 
 <!--ส่วนหัวของเว็บไซต์-->
-    <header class="main-header">
-        <nav class="navdar">
-            <a href="index.html" class="logo">NATTHAWUT</a>
-                    <ul class="nav-links">
-                    <li><a href="#about">เกี่ยวกับ</a></li>
-                    <li><a href="#Projects">ผลงาน</a></li>
-                    <li><a href="contact.html">ติดต่อ</a></li>
-                </ul>
-        </nav>
-    </header>
+<header class="main-header">
+    <nav class="navdar">
+        <a href="index.html" class="logo">NATTHAWUT</a>
+            <ul class="nav-links">
+                <li><a href="performance1.html">เกี่ยวกับ</a></li>
+                <li><a href="#">ผลงาน</a></li>
+                <li><a href="contact.html">ติดต่อ</a></li>
+            </ul>
+    </nav>
+</header>
 
   <!--ส่วนหัวของเว็บไซต์-->
     <main class="Project-section">
